kubernetes/_items-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flaskapp  # Change this name if you want a different one
