kubernetes/items-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-deploy
  namespace: flaskapp
  labels:
    app: flaskapp
    environment: production
    team: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
        - name: flaskapp
          image: somalianboi/kiii-web:latest  # Replace with your image
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: "/app/data"
              name: app-storage
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-pvc
