kubernetes/items-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-db-headless
  namespace: flaskapp
spec:
  clusterIP: None
  selector:
    app: flaskapp-db
  publishNotReadyAddresses: true
  ports:
    - protocol: TCP
      port: 27017
