kubernetes/items-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiii-app-service
  namespace: itemsapp
spec:
  selector:
    app: kiii-app
  ports:
    - protocol: TCP
      port: 5000        
      targetPort: 5000  
  type: ClusterIP
